Header spacing fix

--- a/style.scss
+++ b/style.scss
@@ -88,7 +88,7 @@ a:hover {
 
 #nav-search {
   input {
-    max-width: 50%;
+    max-width: 90%;
   }
 }
 
